--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  min-width: 100vh;
   min-height: 100vh;
   background-color: #b1aec7;
 }
